# oecon

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: nwb_implementation_plan.md  parallelization_plan.md  rerun_steps_plan.md
src/cli/: main.py
src/gui/: app.py  config_widget.py  inspector_app.py  inspector_widget.py  main_window.py  settings.py  widgets.py
src/oecon/: __init__.py  config.py  convert_open_ephys_to_dh5.py  decimation.py  default_mappings.py  events.py  file_writer.py  inspect.py  mua.py  raw.py  trialmap.py  version.py
tests/: conftest.py  test_cli_multisession.py  test_config_saveload.py  test_decimation.py  test_file_writer.py  test_realdata.py  test_realdata_decimation.py  test_realdata_events.py  test_realdata_mua.py  test_realdata_raw.py  test_realdata_trialmap.py  test_trialmap.py  test_validate_session_path.py
tests/data/: Test 2026_03_12 16_32_08.tdr  Test_2026-03-12_16-32-08_exp0_rec0.config.json  Test_2026-03-12_16-32-08_exp1_rec1.config.json
tests/data/Test_2026-03-12_16-32-08/Record Node 101/: settings.xml
tests/data/Test_2026-03-12_16-32-08/Record Node 101/experiment1/recording1/: structure.oebin  sync_messages.txt
tests/data/Test_2026-03-12_16-32-08/Record Node 101/experiment1/recording1/events/MessageCenter/: sample_numbers.npy  text.npy  timestamps.npy
tests/data/Test_2026-03-12_16-32-08/Record Node 101/experiment1/recording1/events/NI-DAQmx-110.USB-6343/TTL/: full_words.npy  sample_numbers.npy  states.npy  timestamps.npy
tests/data/Test_2026-03-12_16-32-08/Record Node 101/experiment1/recording1/events/Network_Events-109.USB-6343/TTL/: full_words.npy  sample_numbers.npy  states.npy  timestamps.npy
